--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "browserify": "^13.1.1",
+    "cors": "file:node_modules/cors",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "knex": "^0.12.6",
